--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -3,13 +3,22 @@
   color: #2c2c2c
 }
 
+a {
+    text-decoration: none;
+}
+
 .logo {
     font-family: "Lora Bold", serif;
     font-weight: bold;
+    font-size: 1.3em;
     flex-grow: 1;
 }
 
-.logo, h2 {
+.logo > * {
+    color: #267896 !important;
+}
+
+h2 {
     color: #267896;
 }
 
