--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -5,6 +5,7 @@
 
 a {
     text-decoration: none;
+    color: #267896;
 }
 
 .logo {
@@ -27,7 +28,7 @@ h1 {
   font-size: 5em;
   font-family: "Lora Bold", serif;
 }
-p {
+p, li {
   font-size: 1.3em;
   max-width: 50em;
 }
@@ -37,4 +38,8 @@ body{
     font-size: 16px;
 }
 
-
+/*
+iframe {
+    max-width: 50em;
+}
+*/
