change background for participants

--- a/src/Main.css
+++ b/src/Main.css
@@ -148,7 +148,7 @@ body{
   margin-top: 1em;
   margin-bottom: 1em;
 }
-
+.css-s18byi,
 .css-bhp9pd-MuiPaper-root-MuiCard-root {
   background-color: transparent !important;
   /* box-shadow: none; */
